# data_stack

./: .gitignore  .pre-commit-config.yaml  .trivyignore  README.md
.github/workflows /: push_dockerfile.yml
apps/log-consumer/base/: deployment.yaml
apps/log-consumer/overlays/prod/: kustomization.yaml
apps/log-producer/base/: deployment.yaml
apps/log-producer/overlays/dev/: kustomization.yaml
apps/log-producer/overlays/prod/: kustomization.yaml
argocd/applications/airflow/base/: application.yaml
argocd/applications/airflow/overlays/dev/: kustomization.yaml
argocd/applications/airflow/values/: prod.yaml
argocd/applications/kafka/base/: application.yaml
argocd/applications/kafka/overlays/dev/: kustomization.yaml
argocd/applications/kafka/values/: dev.yaml  prod.yaml
argocd/applications/log-producer/overlays/prod/: kustomization.yaml
argocd/apps/airflow/values/: dev.yaml
argocd/apps/kafka/base/: application.yaml
argocd/apps/kafka/values/: dev.yaml  prod.yaml
argocd/apps/log-consumer/base/: application.yaml
argocd/apps/log-producer/base/: application.yaml
argocd/environments/dev/: kustomization.yaml
argocd/environments/prod/: kustomization.yaml
argocd/projects/: data-stack-project.yaml
argocd/root-apps/: dev-app-of-apps.yaml  prod-app-of-apps.yaml
infra/terraform/: README.md
services/: README.md
services/log-consumer/: README.md  pyproject.toml
services/log-consumer/src/log_consumer/: main.py
services/log-producer/: README.md  pyproject.toml
services/log-producer/src/log_producer/: main.py
(+5 files in other folders)
