[project]
name = "log-consumer"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "kafka-python",
]

[project.scripts]
log-consumer = "log_consumer.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/log_consumer"]
