[project]
name = "log-producer"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "kafka-python",
]

[project.scripts]
log-consumer = "log_producer.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/log_producer"]
